# IMAGE_processor

./: CMakeLists.txt  Crop.cpp  Crop.h  Edge.cpp  Edge.h  Filters.h  GaussianBlur.cpp  GaussianBlur.h  GrayScale.cpp  GrayScale.h  Negative.cpp  Negative.h  Parser.cpp  Parser.h  Pixel.h  Pointillize.cpp  Pointillize.h  README.md  Read_and_Write.cpp  Read_and_Write.h  Sharpening.cpp  Sharpening.h  image_processor.cpp  image_processor.h  readme.md
